--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -1,11 +1,7 @@
-Combat.WolfExamine=[[YELLOW]]**du musterst den Wolf mit Bestienkunde**
-Combat.WolfShowMaster=[[DARK_YELLOW]]Der Bestienmeister \: {0}
 Combat.Ignition=[[RED]]**ENTZUENDEN**
 Combat.BurningArrowHit=[[DARK_RED]]Du wurdest von einem brennenden Pfeil gestriffen\!
 Combat.TouchedFuzzy=[[DARK_RED]]Benommen. fuehlt sich schwindelig.
 Combat.TargetDazed=Target was [[DARK_RED]]benommen
-Combat.WolfNoMaster=[[AQUA]]Diese Bestie hat keinen Meister...
-Combat.WolfHealth=[[YELLOW]]Die Bestie hat {0} Lebensenergie 
 Combat.StruckByGore=[[RED]]**Getroffen von Biss**
 Combat.Gore=[[YELLOW]]**BISS**
 Combat.ArrowDeflect=[[AQUA]]**PFEIL ABGELENKT**
@@ -39,7 +35,6 @@ m.YourStats=[[DARK_AQUA]]_______ [[YELLOW]]DEINE WERTE [[DARK_AQUA]]_______
 m.SkillTaming=Bestienkunde (Taming)
 m.XPGainTaming=Animal Taming, or combat w/ your wolves
 m.EffectsTaming1_0=[[YELLOW]]Bestienkunde
-m.EffectsTaming1_1=[[AQUA]]mit Knochen schlagen inspiziert Woelfe
 m.EffectsTaming2_0=[[YELLOW]]Biss
 m.EffectsTaming2_1=[[AQUA]]Kritischer Schlag mit Blutungseffekt
 m.EffectsTaming3_0=[[YELLOW]]Geschaerfte Krallen
@@ -304,8 +299,7 @@ Skills.Disarmed=[[DARK_RED]]Du wurdest entwaffnet!
 m.LVL=[[AQUA]]LVL: [[GREEN]]{0} [[DARK_AQUA]]XP[[YELLOW]] ([[AQUA]]{1}[[YELLOW]]/[[AQUA]]{2}[[YELLOW]])
 Combat.BeastLore=[[YELLOW]]**BESTIENKUNDE**
 Combat.BeastLoreOwner=[[DARK_AQUA]]Besitzer ([[RED]]{0}[[DARK_AQUA]])
-Combat.BeastLoreHealthWolfTamed=[[DARK_AQUA]]Gesundheit ([[YELLOW]]{0}[[DARK_AQUA]]/20)
-Combat.BeastLoreHealthWolf=[[DARK_AQUA]]Gesundheit ([[YELLOW]]{0}[[DARK_AQUA]]/8)
+Combat.BeastLoreHealth=[[DARK_AQUA]]Gesundheit ([[YELLOW]]{0}[[DARK_AQUA]]/{1})
 mcMMO.Description=mcMMO.Description=[[DARK_AQUA]]About the [[YELLOW]]mcMMO[[DARK_AQUA]] Project:,[[GOLD]]mcMMO is an [[RED]]open source[[GOLD]] RPG mod created in February 2011,[[GOLD]]by [[BLUE]]nossr50[[GOLD]]. The goal is to provide a quality RPG experience.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] to see commands,[[GOLD]] - [[GREEN]]Type [[RED]]/SKILLNAME[[GREEN]] to see detailed skill info,[[DARK_AQUA]]Developers:,[[GOLD]] - [[GREEN]]TheYeti [[BLUE]](Project Lead & Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Developer),[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Developer & Creator),[[DARK_AQUA]]Useful Links:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug Reporting,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]www.mcmmo.org[[GOLD]] Official Website,[[GOLD]] - [[GREEN]]http://bit.ly/x3Yvry[[GOLD]] Bukkit Forum Thread,[[GOLD]] - [[GREEN]]https://twitter.com/#!/mcmmo_dev[[GOLD]] mcMMO Twitter,[[DARK_AQUA]]Donation Info:
 Party.IsLocked=[[RED]]Gruppe ist gesperrt.
 Party.Locked=[[RED]]Gruppe ist gesperrt, nur der Besitzer kann neue User einladen.
@@ -368,10 +362,8 @@ m.FishingMagicInfo=[[YELLOW]]Schatz-Jaeger: [[GREEN]] *Verbesert sich mit Schatz
 m.ShakeInfo=[[YELLOW]]Reissen: [[AQUA]]Reisse Items aus Mobs und verstuemmelt sie dabei ;_;
 m.AbilLockFishing1=[[DARK_AQUA]]Gesperrt bis Skilllevel 150+ (Reissen)
 m.TamingSummon=[[YELLOW]]Beschwoerung abgeschlossen
-m.TamingSummonFailed=[[YELLOW]]Du hast zu viele Woelfe um dich um weitere zu beschwoeren.
+m.TamingSummonWolfFailed=[[YELLOW]]Du hast zu viele Woelfe um dich um weitere zu beschwoeren.
 m.EffectsTaming7_0=[[YELLOW]]Ruf der Wildniss
-m.EffectsTaming7_1=[[AQUA]]Beschwoere einen Wolf auf deine Seite
-m.EffectsTaming7_2=[[YELLOW]]Info: [[AQUA]]Ducken und Rechtsklick mit {0} Knochen in der Hand
 m.EffectsTaming8_0=Fast Food Service
 m.EffectsTaming8_1=Chance for wolves to heal on attack
 m.AbilLockTaming5=LOCKED UNTIL 50+ SKILL (FAST FOOD SERVICE)
@@ -440,3 +432,8 @@ GodMode.Forbidden=[mcMMO] God Mode not permitted on this world (See Permissions)
 XPRate.Event = [[GOLD]]mcMMO is currently in an XP rate event! XP rate is {0}x!
 BlastMining.Boom = [[GRAY]]**BOOM**
 Party.Forbidden=[mcMMO] Parties not permitted on this world (See Permissions)
+m.EffectsTaming7_1=Summon an animal to your side
+m.EffectsTaming7_2=[[GRAY]]COTW HOW-TO: Crouch and right click with {0} Bones/Fish in hand
+m.EffectsTaming1_1=Bone-whacking inspects wolves/ocelots
+Combat.BeastLoreHealth=[[DARK_AQUA]]Health ([[GREEN]]{0}[[DARK_AQUA]]/{1})
+m.TamingSummonOcelotFailed=[[RED]]You have too many ocelots nearby to summon any more.
