--- a/src/main/resources/locale/locale_en_us.properties
+++ b/src/main/resources/locale/locale_en_us.properties
@@ -1,11 +1,7 @@
-Combat.WolfExamine=[[GREEN]]**You examine the Wolf using Beast Lore**
-Combat.WolfShowMaster=[[DARK_GREEN]]The Beast's Master \: {0}
 Combat.Ignition=[[RED]]**IGNITION**
 Combat.BurningArrowHit=[[DARK_RED]]You were struck by a burning arrow\!
 Combat.TouchedFuzzy=[[DARK_RED]]Touched Fuzzy. Felt Dizzy.
 Combat.TargetDazed=Target was [[DARK_RED]]Dazed
-Combat.WolfNoMaster=[[GRAY]]This Beast has no Master...
-Combat.WolfHealth=[[GREEN]]This beast has {0} Health 
 Combat.StruckByGore=[[RED]]**STRUCK BY GORE**
 Combat.Gore=[[GREEN]]**GORE**
 Combat.ArrowDeflect=[[WHITE]]**ARROW DEFLECT**
@@ -39,7 +35,6 @@ m.YourStats=YOUR STATS
 m.SkillTaming=TAMING
 m.XPGainTaming=Animal Taming, or combat w/ your wolves
 m.EffectsTaming1_0=Beast Lore
-m.EffectsTaming1_1=Bone-whacking inspects wolves
 m.EffectsTaming2_0=Gore
 m.EffectsTaming2_1=Critical Strike that applies Bleed
 m.EffectsTaming3_0=Sharpened Claws
@@ -306,8 +301,7 @@ Skills.Disarmed=[[DARK_RED]]You have been disarmed!
 m.LVL=[[DARK_GRAY]]LVL: [[GREEN]]{0} [[DARK_AQUA]]XP[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
 Combat.BeastLore=[[GREEN]]**BEAST LORE**
 Combat.BeastLoreOwner=[[DARK_AQUA]]Owner ([[RED]]{0}[[DARK_AQUA]])
-Combat.BeastLoreHealthWolfTamed=[[DARK_AQUA]]Health ([[GREEN]]{0}[[DARK_AQUA]]/20)
-Combat.BeastLoreHealthWolf=[[DARK_AQUA]]Health ([[GREEN]]{0}[[DARK_AQUA]]/8)
+Combat.BeastLoreHealth=[[DARK_AQUA]]Health ([[GREEN]]{0}[[DARK_AQUA]]/{1})
 mcMMO.Description=[[DARK_AQUA]]About the [[YELLOW]]mcMMO[[DARK_AQUA]] Project:,[[GOLD]]mcMMO is an [[RED]]open source[[GOLD]] RPG mod created in February 2011,[[GOLD]]by [[BLUE]]nossr50[[GOLD]]. The goal is to provide a quality RPG experience.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] to see commands,[[GOLD]] - [[GREEN]]Type [[RED]]/SKILLNAME[[GREEN]] to see detailed skill info,[[DARK_AQUA]]Developers:,[[GOLD]] - [[GREEN]]TheYeti [[BLUE]](Project Lead & Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Developer),[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Developer & Creator),[[DARK_AQUA]]Useful Links:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug Reporting,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]www.mcmmo.org[[GOLD]] Official Website,[[GOLD]] - [[GREEN]]http://bit.ly/x3Yvry[[GOLD]] Bukkit Forum Thread,[[GOLD]] - [[GREEN]]https://twitter.com/#!/mcmmo_dev[[GOLD]] mcMMO Twitter,[[DARK_AQUA]]Donation Info:
 Party.Locked=[[RED]]Party is locked, only party leader may invite.
 Party.IsntLocked=[[GRAY]]Party is not locked
@@ -363,10 +357,9 @@ m.FishingMagicInfo=[[RED]]Magic Hunter: [[GRAY]] **Improves With Treasure Hunter
 m.ShakeInfo=[[RED]]Shake: [[YELLOW]]Tear items off mobs, mutilating them in the process ;_;
 m.AbilLockFishing1=LOCKED UNTIL 150+ SKILL (SHAKE)
 m.TamingSummon=[[GREEN]]Summoning complete
-m.TamingSummonFailed=[[RED]]You have too many wolves nearby to summon any more.
+m.TamingSummonWolfFailed=[[RED]]You have too many wolves nearby to summon any more.
+m.TamingSummonOcelotFailed=[[RED]]You have too many ocelots nearby to summon any more.
 m.EffectsTaming7_0=Call of the Wild
-m.EffectsTaming7_1=Summon a wolf to your side
-m.EffectsTaming7_2=[[GRAY]]COTW HOW-TO: Crouch and right click with {0} Bones in hand
 m.EffectsTaming8_0=Fast Food Service
 m.EffectsTaming8_1=Chance for wolves to heal on attack
 m.AbilLockTaming5=LOCKED UNTIL 50+ SKILL (FAST FOOD SERVICE)
@@ -435,3 +428,6 @@ GodMode.Forbidden=[mcMMO] God Mode not permitted on this world (See Permissions)
 XPRate.Event = [[GOLD]]mcMMO is currently in an XP rate event! XP rate is {0}x!
 BlastMining.Boom = [[GRAY]]**BOOM**
 Party.Forbidden=[mcMMO] Parties not permitted on this world (See Permissions)
+m.EffectsTaming7_1=Summon an animal to your side
+m.EffectsTaming7_2=[[GRAY]]COTW HOW-TO: Crouch and right click with {0} Bones/Fish in hand
+m.EffectsTaming1_1=Bone-whacking inspects wolves/ocelots
