--- a/src/main/resources/locale/locale_es_es.properties
+++ b/src/main/resources/locale/locale_es_es.properties
@@ -1,11 +1,7 @@
-Combat.WolfExamine=[[GREEN]]**Has examinado a un lobo usando tu conocimiento de fieras**
-Combat.WolfShowMaster=[[DARK_GREEN]]El maestro de las fieras \: {0}
 Combat.Ignition=[[RED]]**IGNICION**
 Combat.BurningArrowHit=[[DARK_RED]]Has sido golpeado por una flecha ardiendo\!
 Combat.TouchedFuzzy=[[DARK_RED]]Estas confuso. Te sientes mareado...
 Combat.TargetDazed=El objetivo fue [[DARK_RED]]aturdido
-Combat.WolfNoMaster=[[GRAY]]Esta bestia no tiene maestro...
-Combat.WolfHealth=[[GREEN]]Esta bestia tiene {0} de salud 
 Combat.StruckByGore=[[RED]]**GOLPEADO POR MORDISCO**
 Combat.Gore=[[GREEN]]**MORDISCO**
 Combat.ArrowDeflect=[[WHITE]]**FLECHA DESVIADA**
@@ -304,8 +300,7 @@ Skills.Disarmed=[[DARK_RED]]Has sido desarmado!
 m.LVL=[[DARK_GRAY]]LVL: [[GREEN]]{0} [[DARK_AQUA]]EXP[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
 Combat.BeastLore=[[GREEN]]**LEYENDA DE BESTIAS**
 Combat.BeastLoreOwner=[[DARK_AQUA]]Dueño ([[RED]]{0}[[DARK_AQUA]])
-Combat.BeastLoreHealthWolfTamed=[[DARK_AQUA]]Salud ([[GREEN]]{0}[[DARK_AQUA]]/20)
-Combat.BeastLoreHealthWolf=[[DARK_AQUA]]Salud ([[GREEN]]{0}[[DARK_AQUA]]/8)
+Combat.BeastLoreHealth=[[DARK_AQUA]]Salud ([[GREEN]]{0}[[DARK_AQUA]]/{1})
 mcMMO.Description=[[DARK_AQUA]]About the [[YELLOW]]mcMMO[[DARK_AQUA]] Project:,[[GOLD]]mcMMO is an [[RED]]open source[[GOLD]] RPG mod created in February 2011,[[GOLD]]by [[BLUE]]nossr50[[GOLD]]. The goal is to provide a quality RPG experience.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] to see commands,[[GOLD]] - [[GREEN]]Type [[RED]]/SKILLNAME[[GREEN]] to see detailed skill info,[[DARK_AQUA]]Developers:,[[GOLD]] - [[GREEN]]TheYeti [[BLUE]](Project Lead & Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Developer),[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Developer & Creator),[[DARK_AQUA]]Useful Links:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug Reporting,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]www.mcmmo.org[[GOLD]] Official Website,[[GOLD]] - [[GREEN]]http://bit.ly/x3Yvry[[GOLD]] Bukkit Forum Thread,[[GOLD]] - [[GREEN]]https://twitter.com/#!/mcmmo_dev[[GOLD]] mcMMO Twitter,[[DARK_AQUA]]Donation Info:
 Party.Locked=[[RED]]La fiesta esta bloqueda, solo el lider puede invitarte
 Party.IsntLocked=[[GRAY]]La fiesta no esta bloqueada
@@ -361,7 +356,7 @@ m.FishingMagicInfo=[[RED]]Magic Hunter: [[GRAY]] **Improves With Treasure Hunter
 m.ShakeInfo=[[RED]]Shake: [[YELLOW]]Tear items off mobs, mutilating them in the process ;_;
 m.AbilLockFishing1=LOCKED UNTIL 150+ SKILL (SHAKE)
 m.TamingSummon=[[GREEN]]Summoning complete
-m.TamingSummonFailed=[[RED]]You have too many wolves nearby to summon any more.
+m.TamingSummonWolfFailed=[[RED]]You have too many wolves nearby to summon any more.
 m.EffectsTaming7_0=Call of the Wild
 m.EffectsTaming7_1=Summon a wolf to your side
 m.EffectsTaming7_2=[[GRAY]]COTW HOW-TO: Crouch and right click with {0} Bones in hand
@@ -433,3 +428,4 @@ GodMode.Forbidden=[mcMMO] God Mode not permitted on this world (See Permissions)
 XPRate.Event = [[GOLD]]mcMMO is currently in an XP rate event! XP rate is {0}x!
 BlastMining.Boom = [[GRAY]]**BOOM**
 Party.Forbidden=[mcMMO] Parties not permitted on this world (See Permissions)
+m.TamingSummonOcelotFailed=[[RED]]You have too many ocelots nearby to summon any more.
