--- a/src/main/resources/locale/locale_fi.properties
+++ b/src/main/resources/locale/locale_fi.properties
@@ -1,11 +1,7 @@
-Combat.WolfExamine=[[GREEN]]**Tutkit sutta k‰ytt‰m‰ll‰ Pedon Tarinaa**
-Combat.WolfShowMaster=[[DARK_GREEN]]Pedon is‰nt‰ : {0}
 Combat.Ignition=[[RED]]**SYTYTYS**
 Combat.BurningArrowHit=[[DARK_RED]]Palava nuoli osui sinuun\!
 Combat.TouchedFuzzy=[[DARK_RED]]Touched Fuzzy. Felt Dizzy.
 Combat.TargetDazed=Kohde [[DARK_RED]]tyrm‰tty
-Combat.WolfNoMaster=[[GRAY]]T‰ll‰ pedolla ei ole is‰nt‰‰...
-Combat.WolfHealth=[[GREEN]]T‰m‰n pedon terveys on {0}
 Combat.StruckByGore=[[RED]]**SINUA ON PISTETTY**
 Combat.Gore=[[GREEN]]**PISTO**
 Combat.ArrowDeflect=[[WHITE]]**NUOLI TORJUTTU**
@@ -350,7 +346,7 @@ m.FishingMagicInfo=[[RED]]Magic Hunter: [[GRAY]] **Improves With Treasure Hunter
 m.ShakeInfo=[[RED]]Shake: [[YELLOW]]Tear items off mobs, mutilating them in the process ;_;
 m.AbilLockFishing1=LOCKED UNTIL 150+ SKILL (SHAKE)
 m.TamingSummon=[[GREEN]]Summoning complete
-m.TamingSummonFailed=[[RED]]You have too many wolves nearby to summon any more.
+m.TamingSummonWolfFailed=[[RED]]You have too many wolves nearby to summon any more.
 m.EffectsTaming7_0=Call of the Wild
 m.EffectsTaming7_1=Summon a wolf to your side
 m.EffectsTaming7_2=[[GRAY]]COTW HOW-TO: Crouch and right click with {0} Bones in hand
@@ -422,3 +418,7 @@ GodMode.Forbidden=[mcMMO] God Mode not permitted on this world (See Permissions)
 XPRate.Event = [[GOLD]]mcMMO is currently in an XP rate event! XP rate is {0}x!
 BlastMining.Boom = [[GRAY]]**BOOM**
 Party.Forbidden=[mcMMO] Parties not permitted on this world (See Permissions)
+Combat.BeastLore=[[GREEN]]**BEAST LORE**
+Combat.BeastLoreOwner=[[DARK_AQUA]]Owner ([[RED]]{0}[[DARK_AQUA]])
+Combat.BeastLoreHealth=[[DARK_AQUA]]Health ([[GREEN]]{0}[[DARK_AQUA]]/{1})
+m.TamingSummonOcelotFailed=[[RED]]You have too many ocelots nearby to summon any more.
