--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -1,11 +1,7 @@
-Combat.WolfExamine=[[GREEN]]**Stai esaminando il lupo con "Tradizioni Bestia"**
-Combat.WolfShowMaster=[[DARK_GREEN]]Maestro della bestia \: {0}
 Combat.Ignition=[[RED]]**ACCENSIONE**
 Combat.BurningArrowHit=[[DARK_RED]]Sei stato colpito da una freccia di fuoco\!
 Combat.TouchedFuzzy=[[DARK_RED]]Toccato sfocato. Feltro vertiginoso.
 Combat.TargetDazed=L'obbiettivo e [[DARK_RED]]Stordito
-Combat.WolfNoMaster=[[GRAY]]Questa bestia non ha un padrone.
-Combat.WolfHealth=[[GREEN]]Questa bestia ha {0} di vita
 Combat.StruckByGore=[[RED]]**Colpito dalle corne**
 Combat.Gore=[[GREEN]]**CORNE**
 Combat.ArrowDeflect=[[WHITE]]**DEVIARE FRECCIA**
@@ -306,8 +302,7 @@ Skills.Disarmed=[[DARK_RED]]Sei stato disarmato!!
 m.LVL=[[DARK_GRAY]]LVL: [[GREEN]]{0} [[DARK_AQUA]]XP[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
 Combat.BeastLore=[[GREEN]]**BESTIA TRADIZIONALE**
 Combat.BeastLoreOwner=[[DARK_AQUA]]Proprietario ([[RED]]{0}[[DARK_AQUA]])
-Combat.BeastLoreHealthWolfTamed=[[DARK_AQUA]]Vita ([[GREEN]]{0}[[DARK_AQUA]]/20)
-Combat.BeastLoreHealthWolf=[[DARK_AQUA]]Vita ([[GREEN]]{0}[[DARK_AQUA]]/8)
+Combat.BeastLoreHealth=[[DARK_AQUA]]Vita ([[GREEN]]{0}[[DARK_AQUA]]/{1})
 mcMMO.Description=[[DARK_AQUA]]Informazioni su [[YELLOW]]mcMMO[[DARK_AQUA]] Project:,[[GOLD]]mcMMO e una [[RED]]open source[[GOLD]] RPG mod creata nel mese di febbraio 2011,[[GOLD]]by [[BLUE]]nossr50[[GOLD]]. L'obbiettivo e quello di fornire un servizio di qualita RPG,[[DARK_AQUA]]Suggerimenti:,[[GOLD]] - [[GREEN]]Usa [[RED]]/mcc[[GREEN]] per vedere i comandi,[[GOLD]] - [[GREEN]]Scrivi [[RED]]/SKILLNAME[[GREEN]] Per vedere dei dettagli su una skill,[[DARK_AQUA]]Sviluppatori:,[[GOLD]] - [[GREEN]]TheYeti [[BLUE]](Project Lead & Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Developer),[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Developer & Creator),[[DARK_AQUA]]Useful Links:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug Reporting,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]www.mcmmo.org[[GOLD]] Sito ufficiale,[[GOLD]] - [[GREEN]]http://bit.ly/x3Yvry[[GOLD]] Bukkit Forum Thread,[[GOLD]] - [[GREEN]]https://twitter.com/#!/mcmmo_dev[[GOLD]] mcMMO Twitter,[[DARK_AQUA]]Info sulle donazioni:
 Party.Locked=[[RED]]Il party e bloccato , soltanto il leader può invitare.
 Party.IsntLocked=[[GRAY]]Il party non e bloccato
@@ -363,7 +358,7 @@ m.FishingMagicInfo=[[RED]]Cacciatore Magico: [[GRAY]] **Migliora con Cacciatore 
 m.ShakeInfo=[[RED]]Agiti: [[YELLOW]]Elementi tagliandi folle, mutilanti loro nel processo.
 m.AbilLockFishing1=BLOCCATO FINO A 150+ SKILL (AGITARE)
 m.TamingSummon=[[GREEN]]Evocazione completata
-m.TamingSummonFailed=[[RED]]Avete troppi lupi vicini e non puoi evocarne altri.
+m.TamingSummonWolfFailed=[[RED]]Avete troppi lupi vicini e non puoi evocarne altri.
 m.EffectsTaming7_0=Richiamo della giungla
 m.EffectsTaming7_1=Evocare il lupo dal tuo lato
 m.EffectsTaming7_2=[[GRAY]]COTW COME FARE: Accovacciati e clicca con il tasto destro {0} con l'osso in mano
@@ -435,3 +430,4 @@ GodMode.Forbidden=[mcMMO] La god mode non e permessa in questo mondo (Controlla 
 XPRate.Event = [[GOLD]]mcMMO ha un'evento in corso -> XP aumentato! la XP Rate e {0}x!
 BlastMining.Boom = [[GRAY]]**BOOM**
 Party.Forbidden=[mcMMO] I party non sono permessi in questo mondo (Controlla i Permessi)
+m.TamingSummonOcelotFailed=[[RED]]You have too many ocelots nearby to summon any more.
