--- a/src/main/resources/locale/locale_ru.properties
+++ b/src/main/resources/locale/locale_ru.properties
@@ -1,12 +1,7 @@
-Combat.WolfExamine=[[GREEN]]**Вы научили Волка использованию "Удара волка"**
-Combat.WolfExamine=[[GREEN]]**Вы научили Волка использованию "Удара волка"**
-Combat.WolfShowMaster=[[DARK_GREEN]]Мастер по приручению Волков \: {0}
 Combat.Ignition=[[RED]]**Вы подожгли противника стрелой!!**
 Combat.BurningArrowHit=[[DARK_RED]]Вы были поражены горящей стрелой\!
 Combat.TouchedFuzzy=[[DARK_RED]]Вы истекаете кровью. Кружится голова.
 Combat.TargetDazed=Ваша цель [[DARK_RED]]Шокирована
-Combat.WolfNoMaster=[[GRAY]]У этого Волка нет хозяина
-Combat.WolfHealth=[[GREEN]]У этого Волка {0} Здоровья 
 Combat.StruckByGore=[[RED]]**Окравление неудачно**
 Combat.Gore=[[GREEN]]**Окравление**
 Combat.ArrowDeflect=[[WHITE]]**Стрела отскочила**
@@ -305,8 +300,7 @@ Skills.Disarmed=[[DARK_RED]]Вы обезоружены!
 m.LVL=[[DARK_GRAY]]Уровень: [[GREEN]]{0} [[DARK_AQUA]]XP[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
 Combat.BeastLore=[[GREEN]]**Умение "Удар волка" активировано**
 Combat.BeastLoreOwner=[[DARK_AQUA]]Владелец ([[RED]]{0}[[DARK_AQUA]])
-Combat.BeastLoreHealthWolfTamed=[[DARK_AQUA]]Здоровья ([[GREEN]]{0}[[DARK_AQUA]]/20)
-Combat.BeastLoreHealthWolf=[[DARK_AQUA]]Здоровья ([[GREEN]]{0}[[DARK_AQUA]]/8)
+Combat.BeastLoreHealth=[[DARK_AQUA]]Здоровья ([[GREEN]]{0}[[DARK_AQUA]]/{1})
 Party.Locked=[[RED]]Группа запаролена, только лидер группы может приглашать.
 Party.IsntLocked=[[GRAY]]Группа разблокирована
 Party.Unlocked=[[GRAY]]Группа разблокирована
@@ -353,7 +347,7 @@ m.FishingMagicInfo=[[RED]]Magic Hunter: [[GRAY]] **Improves With Treasure Hunter
 m.ShakeInfo=[[RED]]Shake: [[YELLOW]]Tear items off mobs, mutilating them in the process ;_;
 m.AbilLockFishing1=LOCKED UNTIL 150+ SKILL (SHAKE)
 m.TamingSummon=[[GREEN]]Summoning complete
-m.TamingSummonFailed=[[RED]]You have too many wolves nearby to summon any more.
+m.TamingSummonWolfFailed=[[RED]]You have too many wolves nearby to summon any more.
 m.EffectsTaming7_0=Call of the Wild
 m.EffectsTaming7_1=Summon a wolf to your side
 m.EffectsTaming7_2=[[GRAY]]COTW HOW-TO: Crouch and right click with {0} Bones in hand
@@ -425,3 +419,4 @@ GodMode.Forbidden=[mcMMO] God Mode not permitted on this world (See Permissions)
 XPRate.Event = [[GOLD]]mcMMO is currently in an XP rate event! XP rate is {0}x!
 BlastMining.Boom = [[GRAY]]**BOOM**
 Party.Forbidden=[mcMMO] Parties not permitted on this world (See Permissions)
+m.TamingSummonOcelotFailed=[[RED]]You have too many ocelots nearby to summon any more.
