--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -1,11 +1,7 @@
-Combat.WolfExamine=[[GREEN]]**Vous examinez le loup avec le Beast Lore**
-Combat.WolfShowMaster=[[DARK_GREEN]]Le Maître des bêtes \: {0}
 Combat.Ignition=[[RED]]**ALLUMAGE**
 Combat.BurningArrowHit=[[DARK_RED]]Vous avez été frappé par une flèche brûlante\!
 Combat.TouchedFuzzy=[[DARK_RED]]Vous voyez flou. Vous vous sentez étourdi.
 Combat.TargetDazed=La cible a été [[DARK_RED]]Étourdi
-Combat.WolfNoMaster=[[GRAY]]Cette bête n'a pas de maître...
-Combat.WolfHealth=[[GREEN]]Cette bête a {0} points de vie 
 Combat.StruckByGore=[[RED]]**FRAPPÉ JUSQU'AU SANG**
 Combat.Gore=[[GREEN]]**SANG**
 Combat.ArrowDeflect=[[WHITE]]**FLÈCHE DEVIÉE**
@@ -304,8 +300,7 @@ Skills.Disarmed=[[DARK_RED]]Vous avez été désarmé !
 m.LVL=NIVEAU [[GREEN]]{0} - [[DARK_AQUA]]XP : [[YELLOW]][[[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]]]
 Combat.BeastLore=[[GREEN]]**Connaissances des bêtes**
 Combat.BeastLoreOwner=[[DARK_AQUA]]Propriétaire ([[RED]]{0}[[DARK_AQUA]])
-Combat.BeastLoreHealthWolfTamed=[[DARK_AQUA]]Vie ([[GREEN]]{0}[[DARK_AQUA]]/20)
-Combat.BeastLoreHealthWolf=[[DARK_AQUA]]Vie ([[GREEN]]{0}[[DARK_AQUA]]/8)
+Combat.BeastLoreHealth=[[DARK_AQUA]]Vie ([[GREEN]]{0}[[DARK_AQUA]]/{1})
 mcMMO.Description=[[DARK_AQUA]]About the [[YELLOW]]mcMMO[[DARK_AQUA]] Project:,[[GOLD]]mcMMO is an [[RED]]open source[[GOLD]] RPG mod created in February 2011,[[GOLD]]by [[BLUE]]nossr50[[GOLD]]. The goal is to provide a quality RPG experience.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] to see commands,[[GOLD]] - [[GREEN]]Type [[RED]]/SKILLNAME[[GREEN]] to see detailed skill info,[[DARK_AQUA]]Developers:,[[GOLD]] - [[GREEN]]TheYeti [[BLUE]](Project Lead & Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Developer),[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Developer & Creator),[[DARK_AQUA]]Useful Links:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug Reporting,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]www.mcmmo.org[[GOLD]] Official Website,[[GOLD]] - [[GREEN]]http://bit.ly/x3Yvry[[GOLD]] Bukkit Forum Thread,[[GOLD]] - [[GREEN]]https://twitter.com/#!/mcmmo_dev[[GOLD]] mcMMO Twitter,[[DARK_AQUA]]Donation Info:
 Party.Locked=[[RED]]Party is locked, only party leader may invite.
 Party.IsntLocked=[[GRAY]]Party is not locked
@@ -361,7 +356,7 @@ m.FishingMagicInfo=[[RED]]Magic Hunter: [[GRAY]] **Improves With Treasure Hunter
 m.ShakeInfo=[[RED]]Shake: [[YELLOW]]Tear items off mobs, mutilating them in the process ;_;
 m.AbilLockFishing1=LOCKED UNTIL 150+ SKILL (SHAKE)
 m.TamingSummon=[[GREEN]]Summoning complete
-m.TamingSummonFailed=[[RED]]You have too many wolves nearby to summon any more.
+m.TamingSummonWolfFailed=[[RED]]You have too many wolves nearby to summon any more.
 m.EffectsTaming7_0=Call of the Wild
 m.EffectsTaming7_1=Summon a wolf to your side
 m.EffectsTaming7_2=[[GRAY]]COTW HOW-TO: Crouch and right click with {0} Bones in hand
@@ -433,3 +428,4 @@ GodMode.Forbidden=[mcMMO] God Mode not permitted on this world (See Permissions)
 XPRate.Event = [[GOLD]]mcMMO is currently in an XP rate event! XP rate is {0}x!
 BlastMining.Boom = [[GRAY]]**BOOM**
 Party.Forbidden=[mcMMO] Parties not permitted on this world (See Permissions)
+m.TamingSummonOcelotFailed=[[RED]]You have too many ocelots nearby to summon any more.
