Changes to MySQL reconnection stuff and OnDisable()

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -30,6 +30,8 @@ Version 2.0.00-dev
  = Fixed exploit where falling sand & gravel weren't tracked
  = Fixed exploit where Acrobatics could be leveled via Dodge on party members.
  = Fixed exploit where you could gain combat XP on animals summoned by Call of the Wild
+ ! Changed MySQL to try to reconnect every 60 seconds rather than infinitely which caused server hangs
+ ! Changed mcMMO to be better about saving player information on server shutdown
  ! Changed PTP to prevent teleporting if you've been hurt in the last 30 seconds (configurable)
  ! Changed Chimera Wing failure check to use the maxWorldHeight.
  ! Changed inspect failed message to say inspect rather than whois
