--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,7 +7,7 @@ Key:
   ! Change
   - Removal
   
-Version 1.3.03-dev
+Version 1.3.03
  + Added Ocelots to Taming XP tables
  + Added ability to summon Ocelots with Call of the Wild
  + Added offline user functionality to mmoedit
