--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,9 @@ Key:
   ! Change
   - Removal
   
+Version 1.3.04-dev
+ ! Changed MySQL to reload all player information on reconnection
+ 
 Version 1.3.03
  + Added Ocelots to Taming XP tables
  + Added ability to summon Ocelots with Call of the Wild
