--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,7 @@ Key:
   - Removal
   
 Version 1.3.04-dev
+ = Fixed Shake ability dropping bonemeal instead of ink for squids.
  ! Changed MySQL to reload all player information on reconnection
  
 Version 1.3.03
