--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,10 +8,12 @@ Key:
   - Removal
   
 Version 1.3.04-dev
+ + Added McMMOPlayerRepairEvent for API usage - fires after completion of a repair.
  = Fixed Shake ability dropping bonemeal instead of ink for squids.
  = Fixed Green Terra & Super Breaker awarding 4x drops at high levels.
  = Fixed summoned ocelots never changing skins.
  ! Changed MySQL to reload all player information on reconnection
+ ! Move "fake" events to their own package - be sure to update these if you're using the API in your plugin
  
 Version 1.3.03
  + Added Ocelots to Taming XP tables
