--- a/Changelog.txt
+++ b/Changelog.txt
@@ -15,7 +15,7 @@ Version 1.3.04-dev
  = Fixed Green Terra & Super Breaker awarding 4x drops at high levels.
  = Fixed summoned ocelots never changing skins.
  ! Changed MySQL to reload all player information on reconnection
- ! Move "fake" events to their own package - be sure to update these if you're using the API in your plugin
+ ! Changed event package structure - be sure to update these if you're using the API in your plugin
  
 Version 1.3.03
  + Added Ocelots to Taming XP tables
