Fixed a rather "critial" typo.

--- a/src/main/resources/locale/locale_en_us.properties
+++ b/src/main/resources/locale/locale_en_us.properties
@@ -406,7 +406,7 @@ Acrobatics.GracefulRoll=[[GREEN]]**GRACEFUL ROLL**
 Acrobatics.Dodge=[[GREEN]]**DODGE**
 Acrobatics.Roll=**ROLL**
 Axes.HitCritically=[[DARK_RED]]You were CRITICALLY hit!
-Axes.CriticalHit=[[RED]]CRITIAL HIT!
+Axes.CriticalHit=[[RED]]CRITICAL HIT!
 Axes.HitByCleave=[[DARK_RED]]Struck by CLEAVE!
 Swords.EnemyBleeding=[[GREEN]]**ENEMY BLEEDING**
 Swords.HitBySerratedStrikes=[[DARK_RED]]Struck by SERRATED STRIKES!
