--- a/Changelog.txt
+++ b/Changelog.txt
@@ -14,6 +14,7 @@ Version 1.3.04-dev
  = Fixed Shake ability dropping bonemeal instead of ink for squids.
  = Fixed Green Terra & Super Breaker awarding 4x drops at high levels.
  = Fixed summoned ocelots never changing skins.
+ = Fixed bug with Disarm not working
  ! Changed MySQL to reload all player information on reconnection
  ! Changed event package structure - be sure to update these if you're using the API in your plugin
  
