--- a/Changelog.txt
+++ b/Changelog.txt
@@ -17,6 +17,8 @@ Version 1.3.04-dev
  = Fixed Green Terra & Super Breaker awarding 4x drops at high levels.
  = Fixed summoned ocelots never changing skins.
  = Fixed bug with Disarm not working
+ = Fixed some API functions not being visible
+ = Fixed bug where /ptp worked on dead party members
  ! Changed MySQL to reload all player information on reconnection
  ! Changed event package structure - be sure to update these if you're using the API in your plugin
  
