--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,7 +8,8 @@ Key:
   - Removal
 
 Version 1.3.05-dev
- +
+ = Fixed bug with repairing wooden tools
+ ! Changed Tree Feller to account for ability durability loss but not leaves.
 
 Version 1.3.04
  + Added McMMOPlayerRepairEvent for API usage - fires after completion of a repair.
