--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,7 @@ Key:
   - Removal
 
 Version 1.3.05-dev
+ = Fixed XP bar not updating when XP was gained
  = Fixed bug with repairing wooden tools
  = Fixed bug where spawned wolves only had 8 health.
  ! Changed Tree Feller to account for ability durability loss but not leaves.
