Changed bypass node for Arcane Forging to not default to true for OPs

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -12,6 +12,7 @@ Version 1.3.05-dev
  = Fixed bug with repairing wooden tools
  = Fixed bug where spawned wolves only had 8 health.
  ! Changed Tree Feller to account for ability durability loss but not leaves.
+ ! Changed bypass node for Arcane Forging to not default to true for OPs
 
 Version 1.3.04
  + Added McMMOPlayerRepairEvent for API usage - fires after completion of a repair.
