--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,6 +9,7 @@ Key:
 
 Version 1.3.05-dev
  + Added ExperienceAPI and PartyAPI classes for developer use
+ = Fixed errors when Spout would disable itself after start-up
  = Fixed XP bar not updating when XP was gained
  = Fixed bug with repairing wooden tools
  = Fixed bug where spawned wolves only had 8 health.
