--- a/Changelog.txt
+++ b/Changelog.txt
@@ -15,6 +15,7 @@ Version 1.3.05-dev
  = Fixed bug where spawned wolves only had 8 health.
  = Fixed bug where rare Treasures from Excavation were dropping too often
  = Fixed bug where Skull Splitter & Serrated Strikes could be used without permissions.
+ = Fixed bug where API functions were set to static
  ! Changed Tree Feller to account for ability durability loss but not leaves.
  ! Changed bypass node for Arcane Forging to not default to true for OPs
 
