--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,7 @@ Key:
   - Removal
 
 Version 1.3.05-dev
+ + Added bonus damage to Archery, every 50 levels you gain 10% bonus damage
  + Added ExperienceAPI and PartyAPI classes for developer use
  = Fixed errors when Spout would disable itself after start-up
  = Fixed XP bar not updating when XP was gained
