--- a/Changelog.txt
+++ b/Changelog.txt
@@ -10,6 +10,7 @@ Key:
 Version 1.3.05-dev
  + Added bonus damage to Archery, every 50 levels you gain 10% bonus damage
  + Added ExperienceAPI and PartyAPI classes for developer use
+ + Added ability to cap overall power level
  = Fixed errors when Spout would disable itself after start-up
  = Fixed XP bar not updating when XP was gained
  = Fixed bug with repairing wooden tools
