Cleanup of the AddLevels command.

--- a/src/main/resources/locale/locale_en_us.properties
+++ b/src/main/resources/locale/locale_en_us.properties
@@ -211,7 +211,7 @@ mcPlayerListener.GreenThumb=[[GREEN]]**GREEN THUMB**
 mcPlayerListener.GreenThumbFail=[[RED]]**GREEN THUMB FAIL**
 mcPlayerListener.HerbalismSkill=Herbalism: 
 mcPlayerListener.MiningSkill=Mining: 
-mcPlayerListener.NoPermission=Insufficient mcPermissions.
+mcPlayerListener.NoPermission=[[DARK_RED]]Insufficient permissions.
 mcPlayerListener.NoSkillNote=[[DARK_GRAY]]If you don't have access to a skill it will not be shown here.
 mcPlayerListener.NotInParty=[[RED]]You are not in a party.
 mcPlayerListener.InviteSuccess=[[GREEN]]Invite sent successfully.
