More work on commands.

--- a/src/main/resources/locale/locale_en_us.properties
+++ b/src/main/resources/locale/locale_en_us.properties
@@ -431,7 +431,7 @@ Party.Forbidden=[mcMMO] Parties not permitted on this world (See Permissions)
 m.EffectsTaming7_1=Summon an animal to your side
 m.EffectsTaming7_2=[[GRAY]]COTW HOW-TO: Crouch and right click with {0} Bones/Fish in hand
 m.EffectsTaming1_1=Bone-whacking inspects wolves/ocelots
-m.SkillStats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]]
+m.SkillStats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
 Inspect.TooFar=[[RED]]You are too far away to inspect that player!
 Inspect.Offline = [[RED]]That player is offline, inspecting offline players is limited to Ops!
 Inspect.DoesNotExist = [[RED]]Player does not exist in the database!
