Added 'Skill Shot' to Archery. Updated Archery command.

--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -437,3 +437,4 @@ m.EffectsTaming7_2=[[GRAY]]COTW HOW-TO: Crouch and right click with {0} Bones/Fi
 m.EffectsTaming1_1=Bone-whacking inspects wolves/ocelots
 Combat.BeastLoreHealth=[[DARK_AQUA]]Health ([[GREEN]]{0}[[DARK_AQUA]]/{1})
 m.TamingSummonOcelotFailed=[[RED]]You have too many ocelots nearby to summon any more.
+m.ArcherySkillShot=[[RED]]Skill Shot Bonus Damage: [[YELLOW]]{0}%
