--- a/src/main/resources/locale/locale_en_us.properties
+++ b/src/main/resources/locale/locale_en_us.properties
@@ -73,8 +73,8 @@ m.WoodCuttingDoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}%
 m.WoodCuttingTreeFellerLength=[[RED]]Tree Feller Length: [[YELLOW]]{0}s
 m.SkillArchery=ARCHERY
 m.XPGainArchery=Attacking Monsters
-m.EffectsArchery1_0=Ignition
-m.EffectsArchery1_1=25% Chance Enemies will ignite
+m.EffectsArchery1_0=Skill Shot
+m.EffectsArchery1_1=Increases damage done by Bows
 m.EffectsArchery2_0=Daze (Players)
 m.EffectsArchery2_1=Disorients foes
 m.EffectsArchery3_0=Damage+
@@ -440,3 +440,4 @@ Inspect.OfflineStats=mcMMO Stats for Offline Player [[YELLOW]]{0}
 Stats.GatheringHeader=[[GOLD]]-=GATHERING SKILLS=-
 Stats.CombatHeader=[[GOLD]]-=COMBAT SKILLS=-
 Stats.MiscHeader=[[GOLD]]-=MISC SKILLS=-
+m.ArcherySkillShot=[[RED]]Skill Shot Bonus Damage: [[YELLOW]]{0}%
