--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,7 +8,7 @@ Key:
   - Removal
 
 Version 1.3.05-dev
- + Added bonus damage to Archery, every 50 levels you gain 10% bonus damage
+ + Added Skill Shot to Archery which increases damage dealt by 10% every 50 skill levels (caps at 200%)
  + Added ExperienceAPI and PartyAPI classes for developer use
  + Added ability to cap overall power level
  + Added showing powerlevel below a persons name if you run Spout (optional)
@@ -21,6 +21,7 @@ Version 1.3.05-dev
  = Fixed bug where API functions were set to static
  ! Changed Tree Feller to account for ability durability loss but not leaves.
  ! Changed bypass node for Arcane Forging to not default to true for OPs
+ - Removed Ignition from Archery
  - Removed McMMOPlayerRepairEvent - was basically a duplicate of McMMOPlayerRepairCheck but couldn't be cancelled.
 
 Version 1.3.04
