Fixed some missing stuff in locale files.

--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -432,3 +432,12 @@ BlastMining.Boom = [[GRAY]]**BOOM**
 Party.Forbidden=[mcMMO] I party non sono permessi in questo mondo (Controlla i Permessi)
 m.TamingSummonOcelotFailed=[[RED]]Hai troppi gattopardi con te per poterne chiamare altri.
 m.ArcherySkillShot=[[RED]]Skill Shot Bonus Damage: [[YELLOW]]{0}%
+m.SkillStats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
+Inspect.TooFar=[[RED]]You are too far away to inspect that player!
+Inspect.Offline = [[RED]]That player is offline, inspecting offline players is limited to Ops!
+Inspect.DoesNotExist = [[RED]]Player does not exist in the database!
+Inspect.Stats=[[GREEN]]mcMMO Stats for [[YELLOW]]{0}
+Inspect.OfflineStats=mcMMO Stats for Offline Player [[YELLOW]]{0}
+Stats.GatheringHeader=[[GOLD]]-=GATHERING SKILLS=-
+Stats.CombatHeader=[[GOLD]]-=COMBAT SKILLS=-
+Stats.MiscHeader=[[GOLD]]-=MISC SKILLS=-
