--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,10 @@ Key:
   - Removal
 
 Version 1.3.06-dev
+ + Added API functions for obtaining offline profiles & profiles via player names
+ + Changed /addlevel command to work for offline users
+ + Changed PlayerProfile constructor to always take a boolean
+ + Changed getPlayerProfile funtion to work for online & offline users
 
 Version 1.3.05
  + Added Skill Shot to Archery which increases damage dealt by 10% every 50 skill levels (caps at 200%)
