--- a/src/main/resources/locale/locale_pt_br.properties
+++ b/src/main/resources/locale/locale_pt_br.properties
@@ -440,9 +440,10 @@ m.ArcherySkillShot=[[RED]]Skill Shot Bonus Damage: [[YELLOW]]{0}%
 m.SkillStats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
 Inspect.TooFar=[[RED]]You are too far away to inspect that player!
 Inspect.Offline = [[RED]]That player is offline, inspecting offline players is limited to Ops!
-Inspect.DoesNotExist = [[RED]]Player does not exist in the database!
+Commands.DoesNotExist = [[RED]]Player does not exist in the database!
 Inspect.Stats=[[GREEN]]mcMMO Stats for [[YELLOW]]{0}
 Inspect.OfflineStats=mcMMO Stats for Offline Player [[YELLOW]]{0}
 Stats.GatheringHeader=[[GOLD]]-=GATHERING SKILLS=-
 Stats.CombatHeader=[[GOLD]]-=COMBAT SKILLS=-
 Stats.MiscHeader=[[GOLD]]-=MISC SKILLS=-
+Commands.NoConsole=This command does not support console usage.
